solve some warnings